fixed broken css pathing issues

--- a/giphyApp/assets/css/style.css
+++ b/giphyApp/assets/css/style.css
@@ -1,4 +1,4 @@
-ody {
+body {
     background-color: #45454d;
 }
 h1 {
